--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@
 # lc: Library Carpentry
 # cp: Carpentries (to use for instructor traning for instance)
 # incubator: Carpentries Incubator
-carpentry: "swc"
+carpentry: "lc"
 
 # Overall title for pages.
-title: "Lesson Title"
+title: "Introduction to Data Curation for Reproducibility"
 
 # Life cycle stage of the lesson
 # See this page for more details: https://cdh.carpentries.org/the-lesson-life-cycle.html
